@@ -1,3 +1,8 @@
+2006-10-16  Per Bothner  <per@bothner.com>
+
+	* XQParser.java (makeFunctionExp): Simplify using new method
+	getDeclarationValueFromStatic in Declaration.
+
 2006-10-15  Per Bothner  <per@bothner.com>
 
 	* XQParser.java (warnOldVersion): New convenience method.
